<resources>
    <string name="app_name">HTW_Projekt</string>
    <string name="slogan">alles gute =)</string>
    <string name="create_a_new_accout">Create a New Account</string>
    <string name="new_account_erstellen">New Account Erstellen</string>
    <string name="signup">Registieren</string>
    <string name="sign_in">Anmelden</string>
    <string name="email">Email</string>
    <string name="anmelden">Anmelden</string>
    <string name="anmeldung">Anmeldung</string>
    <string name="password">Password</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="displayname">DisplayName</string>
    <string name="profil">Profil</string>
    <string name="meine_auftrag">Aufträge Liste</string>
    <string name="meine_bewerbung">Meine Bewerbung</string>
    <string name="stellen_suchen">Stellen Suchen</string>
    <string name="abmelden">Abmelden</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="display_name">Display Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="bewertung">Bewertung:</string>
    <string name="auftr_ge">Aufträge:</string>
    <string name="change_foto">Change Foto</string>
    <string name="ihre_stellen_beschreibung">Ihre Stellen Beschreibung</string>
    <string name="ihre_arbeit_ort">Ihre Arbeit Ort</string>
    <string name="beginn_arbeit">Beginn Arbeit</string>
    <string name="ihre_arbeit_zeit">Ihre Arbeit Zeit</string>
    <string name="ihre_verg_tung">Ihre Vergütung</string>
    <string name="auftrag_erstellen">Auftrag Erstellen</string>
</resources>
