<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/profil" />

        <item
            android:id="@+id/nav_auftrag"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/meine_auftrag" />

        <item
            android:id="@+id/nav_bewerbung"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/meine_bewerbung" />

        <item
            android:id="@+id/nav_suchen"
            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:title="@string/stellen_suchen" />

        <item
            android:id="@+id/nav_abmelden"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/abmelden" />





</menu>
