<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luongtiendat.htw_projekt.StartActivity"
    android:background="@drawable/background">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp">


        <ImageView

            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp">

        <Button
            android:id="@+id/start_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/btnSignActive"
            android:text="@string/signup"

            android:textColor="@android:color/black" />


        <Button
            android:id="@+id/start_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/btnSignActive"
            android:text="@string/sign_in"

            android:textColor="@android:color/black" />


    </LinearLayout>
</RelativeLayout>
