<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luongtiendat.htw_projekt.AuftragErstellenActivity"
    android:orientation="vertical">

    <include layout="@layout/app_bar"
        android:id="@+id/auftrag_erstellen_appbar"
       />

    <ScrollView
        android:layout_width="367dp"
        android:layout_height="551dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/auftrag_erstellen_appbar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_erstellen_appbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/auftrag_erstellen_appbar"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/auftrag_titel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp">

                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Ihre Titel" />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_erstellen_appbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/auftrag_stellen_beschreibung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp">
                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ihre_stellen_beschreibung" />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_erstellen_appbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/auftrag_arbeit_ort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ihre_arbeit_ort" />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_erstellen_appbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/auftrag_begin_arbeit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/beginn_arbeit"
                        android:inputType="datetime"/>
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_erstellen_appbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/auftrag_arbeit_zeit"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp">

                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ihre_arbeit_zeit"
                        android:inputType="time"/>
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/auftrag_erstellen_appbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/auftrag_vergutung"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="30dp">

                    <EditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ihre_verg_tung"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <Button
                android:id="@+id/auftrag_creat_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:background="@color/btnSignActive"
                android:text="@string/auftrag_erstellen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout5" />
        </LinearLayout>



    </ScrollView>



</android.support.constraint.ConstraintLayout>